--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -65,6 +65,8 @@ layout: default
       </div>
     {% endif %}
 
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=9Q9Ia8AMWfYe_gz__76T7-XmWpmwTqD-DY-3wVqKAdQ&cl=ffffff&w=a"></script>
+
     {% if site.newsletter.enabled and site.footer_fixed %}
       {% include scripts/newsletter.liquid center=true %}
     {% endif %}
