--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -65,7 +65,7 @@ layout: default
       </div>
     {% endif %}
 
-    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=9Q9Ia8AMWfYe_gz__76T7-XmWpmwTqD-DY-3wVqKAdQ&cl=ffffff&w=a"></script>
+    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=200&t=tt&d=9Q9Ia8AMWfYe_gz__76T7-XmWpmwTqD-DY-3wVqKAdQ&co=2d78ad&ct=ffffff&cmo=7dc919&cmn=ff5353'></script>
 
     {% if site.newsletter.enabled and site.footer_fixed %}
       {% include scripts/newsletter.liquid center=true %}
